Add view counter

--- a/index.html
+++ b/index.html
@@ -277,7 +277,9 @@
             <img src="https://cdn.pixabay.com/photo/2018/08/12/15/29/hintersee-3601004_960_720.jpg"/>
         </div>
     </div>
-
+    <span class="counter-title">View Counter<a href='https://freehitcounters.org/'>Hit Counters - for free!</a></span>
+    <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=e0c26eee673720ea5518fd873d33f1331dc997a1'></script>
+    <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/409516/t/3"></script>
     <script src="script.js" async defer></script>
 </body>
 </html>
