add technologies test

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <p>
       I'm currently completing my final term at WPI. I'm a Computer Science major who loves video games and netflix. In my free time I do video game cheat and bot development for several games. 
     </p>
+
+
+    <h2>Major:</h2>
     <p>
       Computer Science
     </p>
-
 
     <h2>Work Experience</h2>
     <ul>
@@ -19,5 +21,30 @@
       <li>Math Tutor (Geometry, Algebra, and Calculus)</li>
       <li>Landscaping</li>
     </ul>
+
+    <h2>Technologies and Methods Experience</h2>
+    
+    <ul>
+      <li>
+        <h3>HTML</h3>
+        <p>Enough to get things done. I know basic tags. I can list most things you need to get things done but I sometimes have to google which tags correspond to what</p>
+      </li>
+      <li>
+        <h3>CSS</h3>
+        <p>A little less than html. I usually use bootstrap if I have to do it. For padding and stuff though I have to consult the documents a lot</p>
+      </li>
+      <li>
+        <h3>Java</h3>
+        <p>Can work in it perfectly fine I just need to look up any docs for specific frameworks or projects I need to work with</p>
+      </li>
+      <li>
+        <h3>JavaScript</h3>
+        <p>I've done work with it </p>
+      </li>
+      <li>Ruby</li>
+      <li>Python</li>
+      <li>Unit Testing</li>
+    </ul>
+
   </body>
 </html>
