Finish adding technologies

--- a/index.html
+++ b/index.html
@@ -41,9 +41,18 @@
         <h3>JavaScript</h3>
         <p>I've done work with it </p>
       </li>
-      <li>Ruby</li>
-      <li>Python</li>
-      <li>Unit Testing</li>
+      <li>
+        <h3>Ruby</h3>
+        <p>No Experience</p>
+      </li>
+      <li>
+        <h3>Python</h3>
+        <p>No issues working with it, pretty straight forward</p>
+      </li>
+      <li>
+        <h3>Unit Testing</h3>
+        <p>Had to do it for intro cs courses, did it at internship, and do it for personal projects.</p>
+      </li>
     </ul>
 
   </body>
