making it nicer

--- a/index.html
+++ b/index.html
@@ -6,24 +6,18 @@
   </head>
   <body>
     <h1>Information about Tarek Safa</h1>
-    <p>
-      I am a CS major set to graduate in 2019.
-    </p>
-    <p>
-      I have taken a plethora of Computer Science courses, of which include:
-	  </p>
+    <p>I am a CS major set to graduate in 2019.</p>
+    <p>I have taken a plethora of Computer Science courses, of which include:</p>
 	  <ul>
-	  <li>Mobile and Ubiquitous Computing </li> 
-	  <li>Algorithms </li> 
-	  <li>Operating Systems </li> 
-	  <li>Databases </li>
-	  <li>Discrete Mathematics </li> 
-	  <li>Foundations of Computer Science </li>
-	  <li>And finally Software Engineering! </li>
+	  <li>Mobile and Ubiquitous Computing</li> 
+	  <li>Algorithms</li> 
+	  <li>Operating Systems</li> 
+	  <li>Databases</li>
+	  <li>Discrete Mathematics</li> 
+	  <li>Foundations of Computer Science</li>
+	  <li>And finally Software Engineering!</li>
 	  </ul>
-    <h2>
-      Experience:
-      </h2>
+    <h2>Experience:</h2>
       <ul>
 	  <li>HTML: Some</li>
 	  <li>CSS: Some</li>
@@ -34,9 +28,7 @@
 	  <li>Unit Testing: None</li>
 	  </ul>
 
-    <h2>
-      Working experience
-    </h2>
+    <h2>Working experience</h2>
     <ul>
       <li>WPI</li>
       <li>SizzleScene, a TrampleZone application</li>
