--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
   <head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <h1>Cameron Maitland</h1>
     <p>
-      I'm currently completing my final term at WPI. I'm a Computer Science major who loves video games and netflix. In my free time I do video game cheat and bot development for several games. 
+      I'm currently completing my final term at WPI. In my free time I do video game cheat and bot development for a few games. I'm a big dog and bird person. I love any show on netflix that's over 1 season.
     </p>
 
 
