--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <html lang="en">
   <head>
 	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link href='https://fonts.googleapis.com/css?family=Cabin Sketch' rel='stylesheet'>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about Maggie Goodwin</h1>
+    <h1>All About Maggie Goodwin</h1>
 	<h2>
 	  Self-Introduction
 	</h2>
+	<img id="me" src="me.png" alt="me" >
     <p>
       Hi! I'm super excited for this class, as I've always been curious about Web
 	  Development. I've dabbled here and there, but I want something I can really
@@ -50,6 +52,7 @@
     <ul>
       <li>Liberty Mutual Intern: June 2015 - August 2018</li>
     </ul>
+	<div id="techxp">
 	<h4>
       Technical experience
     </h4>
@@ -61,6 +64,8 @@
 	  <li>JavaScript, a little</li>
 	  <li>Python, very little</li>
     </ul>
+	</div>
+	<div id="classhist">
 	 <h4>
       Class History
     </h4>
@@ -75,5 +80,6 @@
 	  <li>CS3041: Human-Computer Interaction (&#9829 Jorge &#9829)</li>
 	  <li>CS3733: Soft Eng</li>
     </ul>
+	</div>
   </body>
 </html>
