--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   </head>
   <body>
   		<h1>Information about Tarek Safa</h1>
+  		<div>
   		<img src="images/headshot.png" style="width:100%">
+    	</div>
     	<p>I am a CS major set to graduate in 2019.</p>
     	<p>I have taken a plethora of Computer Science courses, of which include:</p>
 	  	<ul>
