Used CSS to make site better looking and responsive

--- a/index.html
+++ b/index.html
@@ -1,51 +1,99 @@
 <html lang="en">
-  <head>
-    <title>CS4241 Assignment 1</title>
-    <meta charset="utf-8">
-  </head>
-  <body>
-    <h1>Information about Adonay Resom</h1>
-    <p>
-      Hello. I'm an international student from Ethiopia and I am currently in my senior year as an undergrad. My hobbies include coding, music, football (some call it soccer -_-) and binging on garbage tv shows.
-    </p>
-    <p>
-      I'm pursuing a Bachelor of Science degreee in Computer Science. I've taken a lot of CS courses over three years, however, I havent taken any related to webware.
-    </p>
-    <p>
-      I'm still a novice at web programming, however, I learn pretty fast.
-    </p>
+    <head>
+        <title>CS4241 Assignment 1</title>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="styles/main.css">
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-    <h2>Experience</h2>
-    <p>
-      Working experience
-    </p>
-	<p>
-      <ul>
-		<li>A Lot:</li>
-		<ul>
-			<li>Java</li>
-			<li>Python</li>
-			<li>HTML</li>
-			<li>Unit Testing</li>
-		</ul>
-	  </ul>
-    </p>
-	<p>
-      <ul>
-		<li>Some:</li>
-		<ul>
-			<li>JavaScript</li>
-			<li>CSS</li>
-		</ul>
-	  </ul>
-    </p>
-    <p>
-      <ul>
-		<li>None:</li>
-		<ul>
-			<li>Ruby</li>
-		</ul>
-	  </ul>
-    </p>
-  </body>
+        <!-- Link font from Google API-->
+        <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
+
+        <!-- Optional theme -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    </head>
+    <body>
+        <div class="container">
+            <div class="containerAligner">
+                <div class="allContent">
+                    <div class="title">
+                        Hi, I'm Adonay. Welcome to my Webware Assignment.
+                    </div>
+                    <div class="mainContent logo">
+                        <p>
+                            My full name is Adonay Resom and I'm an international student from Ethiopia. I'm currently in my senior year as an undergrad. My hobbies include coding, music, football (some call it soccer -_-) and binging on garbage tv shows.
+                        </p>
+                        <p>
+                            I'm pursuing a Bachelor of Science degreee in Computer Science. I've taken a lot of CS courses over three years, however, I haven't taken any related to webware.
+                        </p>
+                        <p>
+                            I'm still a novice at web programming, however, I learn pretty fast.
+                        </p>
+                        
+                        <a href = "https://github.com/adonayz"><img id="logo" src="/images/github_logo.png" alt="Github Logo"></a>
+                    </div>
+
+                    <div>
+                        <p class="subtitle">Experience</p>
+                        <p>
+                            Working experience
+                        </p>
+                        <p>
+                        <ul>
+                            <li>A Lot:</li>
+                            <ul>
+                                <li>Java</li>
+                                <li>Python</li>
+                                <li>HTML</li>
+                                <li>Unit Testing</li>
+                            </ul>
+                        </ul>
+                        </p>
+                    <p>
+                    <ul>
+                        <li>Some:</li>
+                        <ul>
+                            <li>JavaScript</li>
+                            <li>CSS</li>
+                        </ul>
+                    </ul>
+                    </p>
+                <p>
+                <ul>
+                    <li>None:</li>
+                    <ul>
+                        <li>Ruby</li>
+                    </ul>
+                </ul>
+                </p>
+            <p>
+                Computer Science Courses Taken
+            </p>
+            <p>
+            <ul>
+                <li>CS1101</li>
+                <li>CS2102</li>
+                <li>CS2303</li>
+                <li>CS2011</li>
+                <li>CS2022</li>
+                <li>CS2223</li>
+                <li>CS3043</li>
+                <li>CS3013</li>
+                <li>CS3041</li>
+                <li>CS3133</li>
+                <li>CS3733</li>
+                <li>CS3431</li>
+                <li>CS4233</li>
+                <li>CS4123</li>
+                <li>CS3516</li>
+                <li>CS4533</li>
+            </ul>
+            </p>
+        </div>
+    </div>
+</div>
+</div>
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+</body>
 </html>
