--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <style>
+      body {
+        background-color: lightblue;
+      }
+      
+      
+
+    </style>
+
   </head>
   <body>
     <h1>Cameron Maitland</h1>
