--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
   		<h1>Information about Tarek Safa</h1>
   		<div>
-  		<img src="images/headshot.png" style="width:100%">
+  		<img src="images/headshot.png" style="width:50%" style="height:50%">
     	</div>
     	<p>I am a CS major set to graduate in 2019.</p>
     	<p>I have taken a plethora of Computer Science courses, of which include:</p>
