--- a/index.html
+++ b/index.html
@@ -5,11 +5,8 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <style>
       body {
-        background-color: lightblue;
+        background-color: #748b89;
       }
-      
-      
-
     </style>
 
   </head>
