--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <ul>
           <li> CS1001 - Introduction to Programming
           <li> CS2119 - Building Applications using Object Oriented Concepts
-          <li> CS3043 - Social Implications of idk what the rest was called
+          <li> CS3043 - Social Implications of Information Processing
         </ul>
       </p>
 
@@ -42,6 +42,7 @@
           <li>unit testing - none</li>
         </ul>
         </p>
+        <img src="images/me.jpeg">
     </div>
   </body>
 </html>
