--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <style>
       body {
         background-color: #748b89;
+        font-family: Georgia, 'Times New Roman', Times, serif
       }
     </style>
 
