--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <li>unit testing - none</li>
         </ul>
         </p>
-        <img src="/Users/SydneyHurley/Documents/webware/A1/a1-gettingstarted/images/me.jpeg">
+        <img src="/images/me.jpeg">
     </div>
   </body>
 </html>
