--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <li>unit testing - none</li>
         </ul>
         </p>
-        <img src="/images/me.jpeg">
+        <img src="/images/me.jpeg" alt="this is a picture of me">
     </div>
   </body>
 </html>
