--- a/index.html
+++ b/index.html
@@ -30,6 +30,47 @@
       <li>Landscaping</li>
     </ul>
 
+    <h2>Previous Courses</h2>
+
+    <table>
+      <tr>
+        <th>ID</th>
+        <th>Course</th>
+      </tr>
+      <tr>
+        <td>4401</td>
+        <td>Software Security Engineering</td>
+      </tr>
+      <tr>
+        <td>4432</td>
+        <td>Database Systems II</td>
+      </tr>
+      <tr>
+        <td>4518</td>
+        <td>Mobile and Ubiquitous Computing</td>
+      </tr>
+      <tr>
+        <td>3041</td>
+        <td>Human Computer Interaction</td>
+      </tr>
+      <tr>
+        <td>3516</td>
+        <td>Computer Networks</td>
+      </tr>
+      <tr>
+        <td>3733</td>
+        <td>Software Engineering</td>
+      </tr>
+      <tr>
+        <td>4731</td>
+        <tr>Computer Graphics</tr>
+      </tr>
+      <tr>
+        <td>3133</td>
+        <td>Foundations of Computer Science</td>
+      </tr>
+    </table>
+
     <h2>Technologies and Methods Experience</h2>
     
     <ul>
@@ -47,7 +88,7 @@
       </li>
       <li>
         <h3>JavaScript</h3>
-        <p>I've done work with it </p>
+        <p>I've done work with it. Can do things self sufficiently but need to look at documentation for specific frameworks</p>
       </li>
       <li>
         <h3>Ruby</h3>
