add style to table

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
         background-color: #748b89;
         font-family: Georgia, 'Times New Roman', Times, serif
       }
+
+      table {
+        border: 1px;
+      }
+
+      th {
+        padding: 10px;
+      }
     </style>
 
   </head>
@@ -63,7 +71,7 @@
       </tr>
       <tr>
         <td>4731</td>
-        <tr>Computer Graphics</tr>
+        <td>Computer Graphics</td>
       </tr>
       <tr>
         <td>3133</td>
