--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <li>unit testing - none</li>
         </ul>
         </p>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Cat03.jpg/1200px-Cat03.jpg" alt="this is a picture of me">
+        <img src="images/me.jpeg" alt="this is a picture of me">
     </div>
   </body>
 </html>
