--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <div class = "box1">
         <h1>Information about Sydney Hurley </h1>
+
+    <img src="images/me.jpeg" alt="this is a picture of me" height="100" width="100">
     </div>
     <div class = "box2"
         <p>
@@ -42,7 +44,6 @@
           <li>unit testing - none</li>
         </ul>
         </p>
-        <img src="images/me.jpeg" alt="this is a picture of me">
     </div>
   </body>
 </html>
