fixing images hopefully

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
   <body>
     <div class="header">
       <div class="header-left">
-        <img src="images/thetachi.jpg">
+        <img src="thetachi.jpg">
       </div>
       <div class="header-right">
-        <img src="images/thetachi.jpg">
+        <img src="thetachi.jpg">
       </div>
       <div class="header-middle">
         <h1>Jason King</h1>
