--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class = "box1">
         <h1>Information about Sydney Hurley </h1>
 
-    <img src="images/me.jpeg" alt="this is a picture of me" height="100" width="100">
+    <img src="images/me.jpeg" alt="this is a picture of me" height="100" width="100" class="center">
     </div>
     <div class = "box2"
         <p>
