--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
     }
     .header-middle {
       text-align: center;
-      /* width: 300px; */
+      width: 30%;
       margin-left: auto;
       margin-right: auto;
     }
     .header-right {
       float: right;
-      /* width: 300px; */
+      width: 35%;
       margin-right: 20px;
     }
     .header-left {
       float: left;
-      /* width: 300px; */
+      width: 35%;
       margin-left: 20px;
     }
     .column {
