--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
     <meta charset="utf-8">
     <style>
     * {
-      /* font-size: 100%; */
       font-family: courier;
     }
     .header {
       background-color: #F1F1F1;
-      height: 55px;
+      height: 150px;
       padding: 20px;
     }
     .header-middle {
@@ -67,10 +66,10 @@
   <body>
     <div class="header">
       <div class="header-left">
-        <img src="thetachi.jpg">
+        <img src="thetachi.jpg" height="140px" width="200px">
       </div>
-      <div class="header-right">
-        <img src="thetachi.jpg">
+      <div class="header-right" height="140px" width="200px">
+        <img src="family.jpg">
       </div>
       <div class="header-middle">
         <h1>Jason King</h1>
