--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>Information about Connor McNamara</h1>
