--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
       <div class="header-left">
         <img src="thetachi.jpg" height="140px" width="200px">
       </div>
-      <div class="header-right" height="140px" width="200px">
-        <img src="family.jpg">
+      <div class="header-right">
+        <img src="family.jpg"  height="140px" width="200px">
       </div>
       <div class="header-middle">
         <h1>Jason King</h1>
