--- a/index.html
+++ b/index.html
@@ -2,7 +2,21 @@
   <head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <style>
+    body {
+      background-color: lightblue;
+    }
+
+    h1 {
+      color: blue;
+      text-align: center;
+    }
+
+    p {
+      font-family: verdana;
+      font-size: 20px;
+    }
+    </style>
   </head>
   <body>
     <h1>Information about Connor McNamara</h1>
