--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     p {
       font-family: verdana;
       font-size: 20px;
+      margin-top: 100px;
+      margin-bottom: 100px;
+      margin-right: 150px;
+      margin-left: 80px;
     }
     </style>
   </head>
