--- a/index.html
+++ b/index.html
@@ -17,14 +17,16 @@
       margin-right: auto;
     }
     .header-right {
+      text-align: center;
       float: right;
       width: 35%;
-      margin-right: 20px;
+      margin: auto
     }
     .header-left {
+      text-align: center;
       float: left;
       width: 35%;
-      margin-left: 20px;
+      margin: auto;
     }
     .column {
       padding-left: 25%;
@@ -69,7 +71,7 @@
         <img src="thetachi.jpg" height="140px" width="200px">
       </div>
       <div class="header-right">
-        <img src="family.jpg"  height="140px" width="200px">
+        <img src="family.jpg" height="140px" width="200px">
       </div>
       <div class="header-middle">
         <h1>Jason King</h1>
@@ -135,5 +137,6 @@
         document.getElementById("text").style.visibility = 'hidden'
       }
   </script>
-  </body>
-</html>
+
+
+</body></html>
