--- a/index.html
+++ b/index.html
@@ -2,40 +2,46 @@
   <head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <h1>Information about Anthony Gringeri: Class of 2019</h1>
-    <p>
+    <h3>
       I'm a senior at Worcester Polytechnic Institute.
-    </p>
-    <p>
-      My Major: Computer Science
-    </p>
+    </h3>
+    <h2>
+      Major: Computer Science
+    </h2>
     <p>
       Classes I've taken: 
+      <ul>
+        <li>CS 1101: Introduction to Program Design</li>
+        <li>CS 2102: Object-Oriented Design Concepts</li>
+        <li>CS 2011: Introduction to Machine Organization and Assembly</li>
+        <li>CS 2303: Systems Programming Concepts</li>
+        <li>CS 2223: Algorithms</li>
+        <li>CS 3013: Operating Systems</li>
+        <li>CS 3733: Software Engineering</li>
+        <li>CS 3043: Social Implications of Information Processing</li>
+        <li>CS 3133: Foundations of Computer Science</li>
+        <li>CS 3041: Human-Computer Interaction</li>
+        <li>CS 3431: Database Systems 1</li>
+        <li>CS 3516: Computer Networks</li>
+      </ul>
     </p>
-    <ul>
-      <li>CS 1101: </li>
-      <li>CS 2102</li>
-      <li>CS 2011</li>
-      <li>CS 2303</li>
-      <li>CS 2223</li>
-      <li>CS 3013</li>
-      <li>CS 3733</li>
-      <li>CS 3043</li>
-      <li>CS 3133</li>
-      <li>CS 3041</li>
-      <li>CS 3431</li>
-      <li>CS 3516</li>
-    </ul>
 
-    <h2>Experience</h2>
-    <p>
-      Working experience
-    </p>
+    <h2>Work Experience</h2>
     <ul>
-      <li>Chegg Tutors</li>
+      <li>Chegg Tutors: 
+        <ul>
+          <li>Worked one-on-one with students on subject comprehension</li>
+          <li>Assisted students with specific problems and projects</li>
+        </ul>
+        </li>
       <li>Accur8 Software</li>
+        <ul>
+            <li>Developed a tool to migrate company files to Amazon S3 using specific algorithms</li>
+        </ul>
     </ul>
   </body>
 </html>
