last commit, README updates and small fix

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <img src="thetachi.jpg" height="140px" width="200px">
       </div>
       <div class="header-right">
-        <img src="family.jpg" height="140px" width="200px">
+        <img src="mexico.jpg" height="140px" width="200px">
       </div>
       <div class="header-middle">
         <h1>Jason King</h1>
