fixed color scheme

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       Hello, my name is Brady! I am a fifth year cs major graduating in December 2018. Click each option below to find out more about me!
     </p>
     <br>
-    <div class="row" style="background-color: #6585e7">
+    <div class="row" style="background-color: #91a8ee">
       <div class="column" style="display: block;">
         <h2>About Me</h2>
         <p>
