--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/stylesheets/style.css">
   </head>
   <body>
 
@@ -11,7 +11,7 @@
               <h1>Peter Maida</h1>
               <h2>WPI Class of 2020</h2>
               <h2>Computer Science</h2>
-              <img src="/headshot.jpg" alt="Profile Picture">
+              <img src="/imgs/headshot.jpg" alt="Profile Picture">
           </div>
 
            <div class="tab">
@@ -51,30 +51,6 @@
            </div>
 
        </div>
-<!--
-    <p>In my free time I enjoy playing videogames, hanging out with friends, and going to the gym.</p>
 
-    <h2>Course Experience</h2>
-    <ul>
-      <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_3733">CS3733 - Software Engineering</a></li>
-      <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_3516">CS3516 - Computer Networks</a></li>
-      <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_3013">CS3013 - Operating Systems</a></li>
-      <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_3133">CS3133 - Foundations of Computer Science</a></li>
-      <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_3043">CS3043 - Social Implications</a></li>
-      <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_2223">CS2223 - Algorithms</a></li>
-      <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_2303">CS2303 - Systems Programming Concepts</a></li>
-    </ul>
-
-    <h2>Software Experience</h2>
-    <ul>
-      <li>HTML - none</li>
-      <li>CSS - some</li>
-      <li>Java - a lot</li>
-      <li>JavaScript - none</li>
-      <li>Ruby - none</li>
-      <li>Python - a lot</li>
-      <li>unit testing - some</li>
-    </ul>
--->
   </body>
 </html>
