--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
   		<h1>Information about Tarek Safa</h1>
   		
-  		<img src="/images/headshot.jpg" style="width:50%" style="height:50%">
+  		<img src="headshot.jpg" style="width:18%;" style="height:18%;">
     	
     	<p>I am a CS major set to graduate in 2019.</p>
     	<p>I have taken a plethora of Computer Science courses, of which include:</p>
