formatted lists, added pics to server

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="row">
             <div class="col-sm-4">
                 <div class="text-center">
-                <img src="prof.jpg" class="img-rounded" style="width:300px;height:300px;">
+                <img src="prof.jpg" class="img-rounded" style="width:200px;height:200px;">
                 </div>
             </div>
             <div class="col-sm-8">
@@ -21,7 +21,7 @@
                 Hi, my name is Madeline Burke and I am a Senior at Worcester Polytechnic Institute (WPI). I am majoring in Computer Science and minoring in Data Science and Business.
                 </p>
                 <p class="lead">
-                I am also a coxswain on the school's Varsity Rowing Team. 
+                Outside of the classroom, I am also a <a href="https://athletics.wpi.edu/sports/wrowing/2017-18/bios/burke_madeline_6glg?view=news">coxswain on WPI's Varsity Rowing Team</a>. 
                 </p>
             </div>
         </div>
@@ -31,26 +31,27 @@
       
     <div class="container">
         <h2>Experience at WPI</h2>
+        <br>
       <div class="row">
           <div class="col-sm-6">
-              <ul>
-                <li><b>CS1101:</b> Introduction to Program Design</li>
-                <li><b>CS2022:</b> Descrete Mathematics</li>
-                <li><b>CS2102:</b> Object-Oriented Design</li>
-                <li><b>CS2223:</b> Algorithms</li>
-                <li><b>CS2302:</b> Systems Programming</li>
-                <li><b>CS2011:</b> Machine Organization &amp; Assembly</li>
-                <li><b>CS3041:</b> Human-Computer Interaction</li>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item"><b>CS1101:</b> Introduction to Program Design</li>
+                <li class="list-group-item"><b>CS2022:</b> Descrete Mathematics</li>
+                <li class="list-group-item"><b>CS2102:</b> Object-Oriented Design</li>
+                <li class="list-group-item"><b>CS2223:</b> Algorithms</li>
+                <li class="list-group-item"><b>CS2302:</b> Systems Programming</li>
+                <li class="list-group-item"><b>CS2011:</b> Machine Organization &amp; Assembly</li>
+                <li class="list-group-item"><b>CS3041:</b> Human-Computer Interaction</li>
               </ul>
           </div>
           <div class="col-sm-6">
-              <ul>
-                <li><b>CS3043:</b> Social Implications of Information Processing</li>
-                <li><b>CS3133:</b> Foundations of Computer Science</li>
-                <li><b>CS3733:</b> Software Engineering</li>
-                <li><b>CS3013:</b> Operating Systems</li>
-                <li><b>CS3516:</b> Computer Networks</li>
-                <li><b>CS4120:</b> Analysis of Algorithms</li>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item"><b>CS3043:</b> Social Implications of Information Processing</li>
+                <li class="list-group-item"><b>CS3133:</b> Foundations of Computer Science</li>
+                <li class="list-group-item"><b>CS3733:</b> Software Engineering</li>
+                <li class="list-group-item"><b>CS3013:</b> Operating Systems</li>
+                <li class="list-group-item"><b>CS3516:</b> Computer Networks</li>
+                <li class="list-group-item"><b>CS4120:</b> Analysis of Algorithms</li>
               </ul>  
         </div>
         </div>
@@ -82,10 +83,11 @@
     <div class="container">
       <div class="row">
         <h2>Skill Set</h2>
+          <br>
           <div class="row">
-            <div class="col-xs-4">
+            <div class="col-sm-4">
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item"style="text-align: center">    
+                    <li class="list-group-item" style="text-align: center;background-color:#00cc00">    
                 <b>Proficient:</b>
                     </li>
                     <li class="list-group-item">Java</li>
@@ -94,14 +96,14 @@
                     <li class="list-group-item">CSS</li>
                 </ul>
               </div>
-            <div class="col-xs-4">
+            <div class="col-sm-4">
                 <ul>
-                    <li class="list-group-item"style="text-align: center"><b>Novice:</b></li>
+                    <li class="list-group-item" style="text-align: center;background-color:#b3ffb3"><b>Novice:</b></li>
                     <li class="list-group-item">JavaScript</li>
                     <li class="list-group-item">unit testing</li>
                 </ul>
               </div>
-            <div class="col-xs-4">
+            <div class="col-sm-4">
                 <ul>
                     <li class="list-group-item"style="text-align: center"><b>No Experience:</b></li>
                     <li class="list-group-item">Ruby</li>
