--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
 
@@ -11,7 +11,7 @@
               <h1>Peter Maida</h1>
               <h2>WPI Class of 2020</h2>
               <h2>Computer Science</h2>
-              <img src="/imgs/headshot.jpg" alt="Profile Picture">
+              <img src="headshot.jpg" alt="Profile Picture">
           </div>
 
            <div class="tab">
