--- a/index.html
+++ b/index.html
@@ -244,37 +244,37 @@
             <img src="https://images.pexels.com/photos/248797/pexels-photo-248797.jpeg?auto=compress&cs=tinysrgb&h=350"/>
             <img src="https://images.pexels.com/photos/34950/pexels-photo.jpg?auto=compress&cs=tinysrgb&h=350"/>
             <img src="https://wallpaperbrowse.com/media/images/soap-bubble-1958650_960_720.jpg"/>
-            <img src="https://cdn.pixabay.com/photo/2016/10/27/22/53/heart-1776746__340.jpg"/>
-            <img src="https://media.istockphoto.com/photos/plant-growing-picture-id510222832?k=6&m=510222832&s=612x612&w=0&h=Pzjkj2hf9IZiLAiXcgVE1FbCNFVmKzhdcT98dcHSdSk="/>
-            <img src="https://cdn.pixabay.com/photo/2016/08/09/21/54/yellowstone-national-park-1581879_960_720.jpg"/>
-            <img src="https://cdn.pixabay.com/photo/2017/05/07/19/32/strawberry-2293337_960_720.jpg"/>
-            <img src="https://cdn.pixabay.com/photo/2015/10/24/11/09/drop-of-water-1004250_960_720.jpg"/>
-            <img src="https://cdn.pixabay.com/photo/2018/08/17/10/10/tea-lights-3612508_960_720.jpg"/>
-            <img src="https://cdn.pixabay.com/photo/2018/08/12/15/29/hintersee-3601004_960_720.jpg"/>
+            <img src="https://images.pexels.com/photos/454880/pexels-photo-454880.jpeg?auto=compress&cs=tinysrgb&h=350"/>
+            <img src="https://images.pexels.com/photos/773594/pexels-photo-773594.jpeg?auto=compress&cs=tinysrgb&h=350"/>
+            <img src="https://images.pexels.com/photos/949194/pexels-photo-949194.jpeg?auto=compress&cs=tinysrgb&h=350"/>
+            <img src="https://images.pexels.com/photos/490411/pexels-photo-490411.jpeg?auto=compress&cs=tinysrgb&h=350"/>
+            <img src="https://images.pexels.com/photos/844452/pexels-photo-844452.jpeg?auto=compress&cs=tinysrgb&h=350"/>
+            <img src="https://images.pexels.com/photos/1083895/pexels-photo-1083895.jpeg?auto=compress&cs=tinysrgb&h=350"/>
+            <img src="https://images.pexels.com/photos/378442/pexels-photo-378442.jpeg?auto=compress&cs=tinysrgb&h=350"/>
         </div>
         <div class="gallery-column">
             <img src="https://images.pexels.com/photos/248797/pexels-photo-248797.jpeg?auto=compress&cs=tinysrgb&h=350"/>
             <img src="https://images.pexels.com/photos/34950/pexels-photo.jpg?auto=compress&cs=tinysrgb&h=350"/>
             <img src="https://wallpaperbrowse.com/media/images/soap-bubble-1958650_960_720.jpg"/>
-            <img src="https://cdn.pixabay.com/photo/2016/10/27/22/53/heart-1776746__340.jpg"/>
-            <img src="https://media.istockphoto.com/photos/plant-growing-picture-id510222832?k=6&m=510222832&s=612x612&w=0&h=Pzjkj2hf9IZiLAiXcgVE1FbCNFVmKzhdcT98dcHSdSk="/>
-            <img src="https://cdn.pixabay.com/photo/2016/08/09/21/54/yellowstone-national-park-1581879_960_720.jpg"/>
-            <img src="https://cdn.pixabay.com/photo/2017/05/07/19/32/strawberry-2293337_960_720.jpg"/>
-            <img src="https://cdn.pixabay.com/photo/2015/10/24/11/09/drop-of-water-1004250_960_720.jpg"/>
-            <img src="https://cdn.pixabay.com/photo/2018/08/17/10/10/tea-lights-3612508_960_720.jpg"/>
-            <img src="https://cdn.pixabay.com/photo/2018/08/12/15/29/hintersee-3601004_960_720.jpg"/>
+            <img src="https://images.pexels.com/photos/454880/pexels-photo-454880.jpeg?auto=compress&cs=tinysrgb&h=350"/>
+            <img src="https://images.pexels.com/photos/773594/pexels-photo-773594.jpeg?auto=compress&cs=tinysrgb&h=350"/>
+            <img src="https://images.pexels.com/photos/949194/pexels-photo-949194.jpeg?auto=compress&cs=tinysrgb&h=350"/>
+            <img src="https://images.pexels.com/photos/490411/pexels-photo-490411.jpeg?auto=compress&cs=tinysrgb&h=350"/>
+            <img src="https://images.pexels.com/photos/844452/pexels-photo-844452.jpeg?auto=compress&cs=tinysrgb&h=350"/>
+            <img src="https://images.pexels.com/photos/1083895/pexels-photo-1083895.jpeg?auto=compress&cs=tinysrgb&h=350"/>
+            <img src="https://images.pexels.com/photos/378442/pexels-photo-378442.jpeg?auto=compress&cs=tinysrgb&h=350"/>
         </div>
         <div class="gallery-column">
             <img src="https://images.pexels.com/photos/248797/pexels-photo-248797.jpeg?auto=compress&cs=tinysrgb&h=350"/>
             <img src="https://images.pexels.com/photos/34950/pexels-photo.jpg?auto=compress&cs=tinysrgb&h=350"/>
             <img src="https://wallpaperbrowse.com/media/images/soap-bubble-1958650_960_720.jpg"/>
-            <img src="https://cdn.pixabay.com/photo/2016/10/27/22/53/heart-1776746__340.jpg"/>
-            <img src="https://media.istockphoto.com/photos/plant-growing-picture-id510222832?k=6&m=510222832&s=612x612&w=0&h=Pzjkj2hf9IZiLAiXcgVE1FbCNFVmKzhdcT98dcHSdSk="/>
-            <img src="https://cdn.pixabay.com/photo/2016/08/09/21/54/yellowstone-national-park-1581879_960_720.jpg"/>
-            <img src="https://cdn.pixabay.com/photo/2017/05/07/19/32/strawberry-2293337_960_720.jpg"/>
-            <img src="https://cdn.pixabay.com/photo/2015/10/24/11/09/drop-of-water-1004250_960_720.jpg"/>
-            <img src="https://cdn.pixabay.com/photo/2018/08/17/10/10/tea-lights-3612508_960_720.jpg"/>
-            <img src="https://cdn.pixabay.com/photo/2018/08/12/15/29/hintersee-3601004_960_720.jpg"/>
+            <img src="https://images.pexels.com/photos/454880/pexels-photo-454880.jpeg?auto=compress&cs=tinysrgb&h=350"/>
+            <img src="https://images.pexels.com/photos/773594/pexels-photo-773594.jpeg?auto=compress&cs=tinysrgb&h=350"/>
+            <img src="https://images.pexels.com/photos/949194/pexels-photo-949194.jpeg?auto=compress&cs=tinysrgb&h=350"/>
+            <img src="https://images.pexels.com/photos/490411/pexels-photo-490411.jpeg?auto=compress&cs=tinysrgb&h=350"/>
+            <img src="https://images.pexels.com/photos/844452/pexels-photo-844452.jpeg?auto=compress&cs=tinysrgb&h=350"/>
+            <img src="https://images.pexels.com/photos/1083895/pexels-photo-1083895.jpeg?auto=compress&cs=tinysrgb&h=350"/>
+            <img src="https://images.pexels.com/photos/378442/pexels-photo-378442.jpeg?auto=compress&cs=tinysrgb&h=350"/>
         </div>
     </div>
     <span class="counter-title">View Counter<a href='https://freehitcounters.org/'>Hit Counters - for free!</a></span>
