--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
               <h1>Peter Maida</h1>
               <h2>WPI Class of 2020</h2>
               <h2>Computer Science</h2>
-              <img src="headshot.jpg" type="image/jpg" alt="Profile Picture">
+              <img src="headshot.jpg" type="image" alt="Profile Picture">
           </div>
 
            <div class="tab">
