--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
       <h1>Information about Brady Snowden</h1>
     </header>
     <hr>
-    <div style="background-color: #91a8ee">
+    <div style="background-color: #91a8ee;">
       <p>
         Hello, my name is Brady! I am a fifth year cs major graduating in December 2018. Click each option below to find out more about me!
       </p>
       <br>
     </div>
-    <div class="row" style="background-color: #91a8ee">
+    <div class="row" style="background-color: #91a8ee;">
       <div class="column" style="display: block;">
         <h2>About Me</h2>
         <p>
