Added show more and show less to classes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
   </head>
 
-  <body>
+  <p>
     <h1>Information about Cormac Lynch-Collier</h1>
     <p>
       I'm a junior at WPI (class of 2020) and currently pursuing my bachelors in
@@ -24,16 +24,19 @@
       WPI CS Courses
     </h3>
       <ul class="class-col">
-        <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_1101" target="_blank">CS 1101</a></li>
-        <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_2102" target="_blank">CS 2102</a></li>
-        <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_2303" target="_blank">CS 2303</a></li>
-        <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_2011" target="_blank">CS 2011</a></li>
-        <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_2022" target="_blank">CS 2022</a></li>
-        <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_2233" target="_blank">CS 2233</a></li>
-        <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_3733" target="_blank">CS 3733</a></li>
-        <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_3133" target="_blank">CS 3133</a></li>
-        <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_3041" target="_blank">CS 3041</a></li>
+        <li class="first"><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_1101" target="_blank">CS 1101</a></li>
+        <li class="first"><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_2102" target="_blank">CS 2102</a></li>
+        <li class="first"><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_2303" target="_blank">CS 2303</a></li>
+        <li class="first"><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_2011" target="_blank">CS 2011</a></li>
+        <li class="second"><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_2022" target="_blank">CS 2022</a></li>
+        <li class="second"><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_2233" target="_blank">CS 2233</a></li>
+        <li class="second"><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_3733" target="_blank">CS 3733</a></li>
+        <li class="second"><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_3133" target="_blank">CS 3133</a></li>
+        <li class="second"><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_3041" target="_blank">CS 3041</a></li>
       </ul>
+
+    <li id="more">Show More</li>
+    <li id="less">Show Less</li>
     <h3>
       Technologies/Methods
     </h3>
