--- a/index.html
+++ b/index.html
@@ -1,27 +1,83 @@
-<html lang="en">
+<html lang="en" xmlns:https="http://www.w3.org/1999/xhtml" >
 <head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
+    <style>
+        .sidenav {
+            height: 100%;
+            width: 200px;
+            position: fixed;
+            z-index: 1;
+            top: 0;
+            left: 0;
+            background-color: rgb(95, 0, 1);
+            overflow-x: hidden;
+            padding-top: 20px;
+            text-align: center;
+        }
+        .main {
+            margin-left: 200px;
+            Margin-right: 10px;
+            font-size: 15px;
+            padding: 0px 10px;
+        }
+        h1 {
+            color: #000000;
+            font-family: Optima;
+        }
+        h2{
+            color: #000000;
+            font-family: Optima;
+        }
+        p{
+            color: #000000;
+            font-family: "Trebuchet MS";
+        }
+        a:link{
+            color: #000000;
+            text-decoration: none;
+        }
+        a:hover{
+            color: rgba(50, 50, 48, 0.63);
+            text-decoration: none;
+        }
+        a:visited{
+            color: #b3b3b3;
+            text-decoration: none;
+        }
+    </style>
 </head>
-<body bgcolor="#f2e8ff">
-<h1 style="color:#3f196d; text-align:center; font-family: Impact" >Information about Sarah Armstrong</h1>
-<p style="color:#834fc1; font-family: 'Trebuchet MS'">My name is Sarah and I am in the class of 2020 at WPI.
-</p>
-<p style="color:#834fc1; font-family: 'Trebuchet MS'">I am a computer science major with a business minor.</font>
-</p>
-<p style="color:#834fc1; font-family: 'Trebuchet MS'">At WPI I have taken CS 1101, 2102, 2303, 2011, 2022, 2223,
-    3133, 3043, and 3733.</font>
-</p>
-
-<h2 style="color:#3f196d; text-align:center; font-family: Impact">Experience</h2>
-<p style="color:#834fc1; font-family: 'Trebuchet MS'">I have had a lot of experience with java, both in classes and on personal projects.
+<body bgcolor="#ffffff">
+<div class="sidenav">
+    <img src="profile.png" alt="Sarah's Photo" style="width: 190px; height: 190px;">
+    <p><a href="https://github.com/saraharm"> Github </a></p>
+    <p><a href="https://www.linkedin.com/in/sarah-armstrong-486b09156/"> Linked In </a></p>
+</div>
+<div class="main">
+    <h1 style="text-align:center;" >Information about Sarah Armstrong</h1>
+    <p style=" text-align:center;">My name is Sarah and I am in the class of 2020 at WPI.</p>
+    <h2>Major</h2>
+    <p>I am a computer science major with a business minor.</p>
+    <h2 >Previous Courses</h2>
+    <ul>
+        <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_1101"> CS 1101 </a></li>
+        <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_2101">CS 2102</a></li>
+        <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_2011">CS 2011</a></li>
+        <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_2022">CS 2022</a></li>
+        <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_2223">CS 2223</a></li>
+        <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_3133">CS 3133</a></li>
+        <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_3043">CS 3043</a></li>
+        <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_3733">CS 3733</a></li>
+    </ul>
+    <h2>Experience</h2>
+    <p>I have had a lot of experience with java, both in classes and on personal projects.
     I have used HTML, JavaScript, and python in highschool, to make games and websites.
     I have also used CSS and unit testing on class projects.
-    I have yet to use Ruby but am excited to learn more about it.</font>
-</p>
-<ul style = "color:#d7b5ff">
-    <li>IBM/Rational</li>
-    <li>WPI</li>
-</ul>
+    I have yet to use Ruby but am excited to learn more about it.</p>
+    <ul style = "color: #b7b7b7">
+        <li>IBM/Rational</li>
+        <li>WPI</li>
+    </ul>
+</div>
 </body>
 </html>
