--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>CS4241 Assignment 1</title>
+    <link rel="preload" href="style.css" as="style">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <meta charset="utf-8">
   </head>
