--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	    <li>CS 2011: Mach. Org & Assembly</li>
 	    <li>CS 3133: Foundations of CS</li>
 	    <li>CS 3431: Database I</li>
-	    <li>CS 3733: Soft. Eng.</li>
+	    <li>CS 3733: Soft. Eng. (favorite so far)</li>
 	    <li>CS 3013: OS</li>
 	    <li>CS 3516: Computer Networks</li>
 	    <li>CS 4513: Dist. Systems</li>
@@ -40,7 +40,7 @@
 	<p>
 	  Working experience:
 	  <ul>
-	    <li><a href="https://www.tallan.com/">Tallan</a></li>
+	    <li><a href="https://www.tallan.com/">Tallan</a> (full stack development)</li>
 	    <li>WPI</li>
 	  </ul>
 	</p>
@@ -49,31 +49,54 @@
 	  <dl>
 	    <dt><strong>HTML, CSS, and JS:</strong> <em>Some - A lot</em></dt>
 	    <dd>From internships + playing with browser tools</dd>
+	    <br>
 	    <dt><strong>Java:</strong> <em>A lot</em> </dt> 
 	    <dd>My first programming language</dd>
+	    <br>
 	    <dt><strong>Python:</strong> <em>Some - A lot</em></dt> 
 	    <dd>2 and 3</dd>
+	    <br>
 	    <dt><strong>Ruby:</strong> <em>None - Some</em></dt> 
 	    <dd>Haven't needed it so far, but find it interesting</dd>
+	    <br>
 	    <dt><strong>Unit testing:</strong> <em>Some-A lot</em> </dt> 
 	    <dd>Courses at WPI + internships + testing fun projects</dd>
 	  </dl>
 	</p>
       </div>
-      <div class="header" id="quiz-header">A fun animated quiz on Adam</div>
+      <div class="header" id="quiz-header">A fun quiz on Adam</div>
       <div class="content" id="quiz-content">
 	<div id="question-panel"></div>
-	<div id="choices">
+	<div align="center" id="choices">
 	  <!-- Multiple choice -->
-	  <button id="choice1"></button>
-	  <button id="choice2"></button>
-	  <button id="choice3"></button>
-	  <button id="choice4"></button>
+	  <div class="floatleft">
+	    <button class="quiz multi" id="choice1"></button>
+	  </div>
+	  <div class="floatright">
+	    <button class="quiz multi" id="choice2"></button>
+	  </div>
+	  <div style="clear: both;"></div>
+	  <br/>
+	  <div class="floatleft">
+	    <button class="quiz multi" id="choice3"></button>
+	  </div>
+	  <div class="floatright">
+	    <button class="quiz multi" id="choice4"></button>
+	  </div>
+	  <div style="clear: both;"></div>
 	  <!-- True/False -->
-	  <button id="choice-true"></button>
-	  <button id="choice-false"></button>
+	  <div class="floatleft">
+	    <button class="quiz tf" id="choice-true"></button>
+	  </div>
+	  <div class="floatright">
+	    <button class="quiz tf" id="choice-false"></button>
+	  </div>
+	  <div style="clear: both;"></div>
+	  <br/><br/>
 	</div>
-	<button id="submit">New Question</button>
+	<div align="center">
+	  <button id="submit">New Question</button>
+	</div>
       </div>
     </div>
     <!-- Scripts -->
