--- a/index.html
+++ b/index.html
@@ -1,19 +1,50 @@
 <html lang="en">
+  <style>
+    .column {
+      float: left;
+      width: 50%;
+	  height: 420px;
+    }
+	.button {
+	  background-color: moccasin;
+	  padding: 0.5em;
+	  border-radius: 10px;
+	  font-family: "sans-serif", Tahoma, Geneva;
+	  font-size: 16px;
+	}
+  </style>
   <head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
   </head>
-  <body>
-    <h1>Information about Dan Wensley</h1>
+  <body style="background-color:silver">
+  <div>
+  <div>
+    
+    <center><h1>Information about Dan Wensley</h1>
     <p>
       I am a senior at WPI.
     </p>
     <p>
       My majors are Robotics Engineering and Computer Science.
     </p>
-    <p>
-      At WPI I have taken:
-    </p>
+	</center>
+	<div class="column" style="background-color:lightsalmon">
+		<center><h1> RPI Graduate's CS Courses </h1></center>
+		<ul>
+			<li>Computer Science 1</li>
+			<li>Data Structures</li>
+			<li>Foundations of Computer Science</li>
+			<li>Computer Organization</li>
+			<li>Algorithms</li>
+			<li>Principles of Software</li>
+			<li>Programming Languages</li>
+			<li>Operating Systems</li>
+			<li>Capstone Project</li>
+		</ul>
+	</div>
+	<div class="column" style="background-color:lightblue">
+	<center><h1> My CS Courses </h1></center>
     <ul>
       <li>Intro to Computer Science</li>
       <li>Object-Oriented Programming</li>
@@ -25,15 +56,28 @@
       <li>Foundations of Computer Science</li>
       <li>AI for Gaming</li>
       <li>Introduction to AI</li>
+	  <li>Webware*</li>
+	  <li>Analysis of Algorithms*</li>
+	  <li>Software Engineering*</li>
+	  <li>Social Implications of Technology*</li>
+	  <li>Object-Oriented Analysis and Design*</li>
+	  <li>Capstone Project(MQP)*</li>
     </ul>
-
+	<p style="font-size:8pt"> *Will have completed by the end of the year </p>
+	</div>
+	</div>
+	<center>
     <h2>Experience</h2>
     <p>
       I have a lot of experience with java and python. Additionally, I also have limited experience with HTML, CSS and javascript.
     </p>
-    <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
-    </ul>
+	</center>
+	</div>
+	<center>
+	<h2> Let me know you visited </h1>
+	<form>
+		<input type="submit" value="Say Hi!" class="button">
+	</form>
+	</center>
   </body>
 </html>
