--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
            </div>
 
            <div class="info" id="course-experience">
+               <h4>Here is a list of applicable courses I have taken, click on them for more information</h4>
                <ul>
                  <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_3733">CS3733 - Software Engineering</a></li>
                  <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_3516">CS3516 - Computer Networks</a></li>
@@ -39,6 +40,7 @@
            </div>
 
            <div class="info" id="webdev-experience">
+               <h4>Welcome to my first website! Here is my programming experience:</h4>
                <ul>
                  <li>HTML - none</li>
                  <li>CSS - some</li>
